<resources>
    <string name="app_name">MiniTwitter</string>

    <!--Login-->
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_button">Login</string>
    <string name="text_create_account">Don\'t have an account? Register here</string>
    <string name="string_text_go_login">If you have an account, Login here</string>
    <string name="btn_signup">Sign up</string>

    <!--MainActivity-->
    <string name="editText_username_error_message">Username field is required</string>
    <string name="editText_email_error_message">Email field is required</string>
    <string name="editText_password_error_message">Password field is required</string>
    <string name="title_activity_test">testActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="tweet_list_fragment_label">Tweet List Fragment</string>
    <string name="favorite_tweets_fragment">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Add tweet fragment-->
    <string name="hint_add_tweet_message">What\'s happening?</string>
    <string name="create_tweet_button_text">Send</string>

    <!--Bottom navigation menu titles-->
    <string name="menu_home_title">Home</string>
    <string name="menu_favorites_title">Favorites</string>
    <string name="menu_profile_title">Profile</string>
    <string name="menu_delete_tweet">Delete tweet</string>

    <!--Profile-->
    <string name="profile_button_text">Save</string>
    <string name="profile_username_hint">Username</string>
    <string name="profile_email_hint">Email</string>
    <string name="profile_password_hint">Password</string>

    <string name="generic_error_message">"Something went wrong. Please try again"</string>
    <string name="generic_success_message">Success</string>

    <!--ProgressButton-->
    <string name="please_wait_message">Please wait…</string>
    <string name="done_message">Done</string>

    <!--Exit Dialog-->
    <string name="exit_dialog_title">Close Application</string>
    <string name="exit_dialog_message">Do you want to close the app?</string>

    <string name="formatted_username">"@%1$s"</string>
</resources>