<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_blue"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_view_logo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/logo_minitwitter_mini" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:textColorHint="@color/white"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_password"
        app:layout_constraintEnd_toEndOf="@+id/image_view_logo"
        app:layout_constraintStart_toStartOf="@+id/image_view_logo"
        app:layout_constraintTop_toBottomOf="@+id/image_view_logo"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_text_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_email"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/text_button"
        android:textColor="@color/color_dark_blue"
        app:layout_constraintBottom_toTopOf="@+id/text_view_go_signup"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_password"
        app:layout_constraintStart_toStartOf="@+id/edit_text_password"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_password"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/text_view_go_signup"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/text_create_account"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_login"
        app:layout_constraintStart_toStartOf="@+id/button_login"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>